# vigil

./: .gitignore  LICENSE  Makefile  POSITIONING.md  README.md  SECURITY.md  dev.sh
.github/workflows/: daemon-ci.yml  proxy-ci.yml  release.yml  site-ci.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  demo-data.ts  hooks.ts  index.css  index.html  tauri.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  main.rs  proxy.rs  store.rs  streaming.rs
app/src/__tests__/: App-overview.test.tsx  TopBar-overview.test.tsx  agent-glyph.test.tsx  all-files-panel.test.tsx  confidence-donut.test.tsx  formatters.test.ts  grouping.test.ts  host-glyph.test.tsx  host-tokens.test.ts  milestone-feed.test.tsx  model-chip.test.tsx  model-pill.test.tsx  model-tokens.test.ts  partition.test.ts  pulse-line.test.tsx  review-panel.test.tsx  selection.test.ts  tool-verbs.test.ts  types.test.ts
app/src/components/: ActiveAgents.tsx  ActivityStream.tsx  AgentCard.tsx  AgentGlyph.tsx  AgentLogo.tsx  AgentOrb.tsx  AgentSection.tsx  AllFilesPanel.tsx  BriefingCard.tsx  ChecksPlaceholder.tsx  CollisionBanner.tsx  CollisionCard.tsx  CommandPalette.tsx  CommitCard.tsx  CommitTimeline.tsx  ConfidenceDonut.tsx  DemoBanner.tsx  DiffViewer.tsx  ErrorState.tsx  EventRow.tsx  EventTimeline.tsx  FilesPanel.tsx  Header.tsx  HostGlyph.tsx  (+22 more)
daemon/: Cargo.toml
daemon/src/: cli.rs  codexlog.rs  cost.rs  cursorlog.rs  digest.rs  git.rs  github.rs  hallucination.rs  host.rs  main.rs  process.rs  rollback.rs  sessionlog.rs  store.rs  summarizer.rs  trust.rs  watcher.rs
daemon/src/hooks/: claude.rs
daemon/tests/fixtures/codex/: README.md  sample.jsonl
docs/launch/: README.md  launch-tweet-thread.md  show-hn-post.md  waitlist-announcement-email.md
docs/qa/: 2026-05-15-first-user-experience-report.md
proxy/: README.md  go.mod  go.sum
proxy/bench/: README.md  RESULTS.md  results.json
proxy/clients/python/vigil/: CHANGELOG.md  Makefile  README.md  pyproject.toml
proxy/clients/python/vigil/tests/: test_wrap.py
proxy/clients/python/vigil/vigil/: __init__.py  wrap.py
proxy/scripts/: smoke-postgres.sh
site/: index.html  package-lock.json  package.json  vercel.json
(+218 files in other folders)
