[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
home = "0.5.12"
notify = "8.2.0"
regex = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
