[package]
name = "vigil-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
png = "0.17"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
window-vibrancy = "0.5"
tokio = { version = "1", features = ["full"] }
keyring = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
